<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".activity.LoginActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="184dp"
            android:layout_marginTop="45dp"
            android:src="@drawable/loginpic11" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/title"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/title_intro"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="账号"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_account_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:hint="请输入账号"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="密码"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_pwd_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:hint="请输入密码"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/rg_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rb_busi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/business"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rb_deliveryMan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="配送员"
                android:textSize="16sp" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/blue"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/login"
            android:textColor="@color/white"
            tools:ignore="UnusedAttribute" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_registerUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/blue"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/resigterUser"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_registerBusiness"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@color/blue"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/resigterBusi"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_registerDeliveryMan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@color/blue"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="注册配送员"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>