<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.RegisterUserActivity"
    android:fitsSystemWindows="true">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_registerUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        app:navigationIcon="@drawable/back"
        app:title="用户注册"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_registerU"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/upimg"
                android:layout_marginTop="30dp"
                android:background="@drawable/img_round_oval"
                android:scaleType="centerCrop"
                android:clipToOutline="true"
                tools:targetApi="s"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:text="头像"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="账号"
                android:textSize="14sp"
                android:layout_marginTop="20dp"/>


            <EditText
                android:id="@+id/et_account_registerU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:background="@drawable/rounded_edittext"
                android:hint="请输入账号" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="密码"
                android:textSize="14sp"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/et_pwd_registerU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:background="@drawable/rounded_edittext"
                android:hint="请输入密码"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="昵称"
                android:textSize="14sp"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/et_nickName_registerU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:background="@drawable/rounded_edittext"
                android:hint="请输入昵称" />

            <RadioGroup
                android:id="@+id/rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_registerMale"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/male"/>
                <RadioButton
                    android:id="@+id/rb_registerFemale"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female"/>
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="地址"
                android:textSize="14sp"
                android:layout_marginTop="10dp"/>
            <EditText
                android:id="@+id/et_address_resisterU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:background="@drawable/rounded_edittext"
                android:hint="请输入地址" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="联系方式"
                android:textSize="14sp"
                android:layout_marginTop="10dp"/>
            <EditText
                android:id="@+id/et_phone_resisterU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:background="@drawable/rounded_edittext"
                android:hint="请输入联系方式" />

            <Button
                android:id="@+id/btn_finalRegisterU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/blue"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/resigter"
                android:textColor="@color/white"
                tools:ignore="UnusedAttribute" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>